k8s/gke/apps/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: sdypp
spec:
  serviceName: postgres
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 999
      nodeSelector:
        pool: apps-base
      containers:
        - name: postgres
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
              - ALL
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 384Mi
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "entradas"]
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "entradas"]
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
