k8s/gke/apps/trp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-trp
  namespace: sdypp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockchain-trp
  template:
    metadata:
      labels:
        app: blockchain-trp
    spec:
      nodeSelector:
        pool: apps
      containers:
        - name: trp
          image: us-central1-docker.pkg.dev/tp-final-sdypp/sdypp/blockchain-trp:latest
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
