k8s/gke/apps/worker-cpu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-worker-cpu
  namespace: sdypp
spec:
  replicas: 0
  selector:
    matchLabels:
      app: blockchain-worker-cpu
  template:
    metadata:
      labels:
        app: blockchain-worker-cpu
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
    spec:
      nodeSelector:
        pool: apps-spot
      containers:
        - name: worker-cpu
          image: IMAGE_TAG
          ports:
            - name: metrics
              containerPort: 9000
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
