k8s/gke/apps/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sdypp
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
