k8s/gke/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: sdypp
  annotations:
    networking.gke.io/managed-certificates: frontend-cert
    kubernetes.io/ingress.global-static-ip-name: frontend-ip
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
